Fixed: - p.hint is imperceptible in dark mode app v1

--- a/src/scss/classic/classic-app-v1.scss
+++ b/src/scss/classic/classic-app-v1.scss
@@ -661,5 +661,7 @@
     font-weight: 400;
   }
 
-  // TODO: Extract to shared SCSS file to use with all classic sheets
+  .hint {
+    color: var(--t5e-secondary-color);
+  }
 }
